--- a/pages/address_edit/address_edit.wxml
+++ b/pages/address_edit/address_edit.wxml
@@ -10,7 +10,7 @@
       <view class='del' bindtap='delfun' data-item="{{item}}">
         <image src='/images/del.png'></image>
       </view>
-      <navigator  hover-class="none" url="/pages/address_add/address_add?city={{item.city[0]}},{{item.city[1]}},{{item.city[2]}}&mobile={{item.mobile}}&name={{item.name}}&detailed={{item.detailed}}&id={{item.id}}&number={{list.length}}"  class='edit'>
+      <navigator  hover-class="none" url="/pages/address_add/address_add?city={{item.city[0]}},{{item.city[1]}},{{item.city[2]}}&mobile={{item.mobile}}&name={{item.name}}&detailed={{item.detailed}}&id={{item.id}}&number={{list[list.length-1].id}}"  class='edit'>
         <image src='/images/edit.png'></image>
       </navigator>
       <view class='choice' wx:if="{{item.default == false}}" bindtap='defaultFun' data-item="{{item}}">
@@ -22,7 +22,7 @@
     </view>
   </view>
 </scroll-view>
-<navigator url="/pages/address_add/address_add?number={{list.length}}" class='btn'>
+<navigator url="/pages/address_add/address_add?number={{list[list.length-1].id}}" class='btn'>
  新增收货地址
 </navigator>
 </view>
