--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -17,73 +17,25 @@
 <view class="cart_content">
   <view class="cart_title">购物车</view>
   <view class="cart_main">
-    <view class="cart_item">
+    <view class="cart_item" wx:for="{{cart}}" wx:key="_id">
       <!-- 复选框 -->
       <view class="cart_chk_wrap">
-        <checkbox-group bindchange="">
-          <checkbox></checkbox>
+        <checkbox-group data-id="{{item._id}}" bindchange="handleItemChange">
+          <checkbox checked="{{item.checked}}"></checkbox>
         </checkbox-group>
       </view>
       <!-- 商品图片 -->
       <navigator class="cart_img_wrap">
-        <image mode="widthFix" src="https://i.niupic.com/images/2020/07/18/8qaW.jpg"></image>
+        <image mode="aspectFit" src="{{item.book_picture}}"></image>
       </navigator>
       <!-- 商品信息 -->
       <view class="cart_info_wrap">
-        <view class="goods_name">大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵</view>
+        <view class="goods_name">{{item.book_name}}</view>
         <view class="goods_price_wrap">
-          <view class="goods_price">￥999</view>
+          <view class="goods_price">￥{{item.book_price}}</view>
           <view class="cart_num_tool">
             <view class="num_edit">-</view>
-            <view class="goods_num">10</view>
-            <view class="num_edit">+</view>
-          </view>
-        </view>
-      </view>
-    </view>
-    <view class="cart_item">
-      <!-- 复选框 -->
-      <view class="cart_chk_wrap">
-        <checkbox-group bindchange="">
-          <checkbox></checkbox>
-        </checkbox-group>
-      </view>
-      <!-- 商品图片 -->
-      <navigator class="cart_img_wrap">
-        <image mode="widthFix" src="https://i.niupic.com/images/2020/07/18/8qaW.jpg"></image>
-      </navigator>
-      <!-- 商品信息 -->
-      <view class="cart_info_wrap">
-        <view class="goods_name">大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵</view>
-        <view class="goods_price_wrap">
-          <view class="goods_price">￥999</view>
-          <view class="cart_num_tool">
-            <view class="num_edit">-</view>
-            <view class="goods_num">10</view>
-            <view class="num_edit">+</view>
-          </view>
-        </view>
-      </view>
-    </view>
-    <view class="cart_item">
-      <!-- 复选框 -->
-      <view class="cart_chk_wrap">
-        <checkbox-group bindchange="">
-          <checkbox></checkbox>
-        </checkbox-group>
-      </view>
-      <!-- 商品图片 -->
-      <navigator class="cart_img_wrap">
-        <image mode="widthFix" src="https://i.niupic.com/images/2020/07/18/8qaW.jpg"></image>
-      </navigator>
-      <!-- 商品信息 -->
-      <view class="cart_info_wrap">
-        <view class="goods_name">大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵大伞兵</view>
-        <view class="goods_price_wrap">
-          <view class="goods_price">￥999</view>
-          <view class="cart_num_tool">
-            <view class="num_edit">-</view>
-            <view class="goods_num">10</view>
+            <view class="goods_num">{{item.number}}</view>
             <view class="num_edit">+</view>
           </view>
         </view>
@@ -97,18 +49,18 @@
   <!-- 全选 -->
   <view class="all_chk_wrap">
     <checkbox-group bindchange="">
-      <checkbox>全选</checkbox>
+      <checkbox checked="{{allChecked}}">全选</checkbox>
     </checkbox-group>
   </view>
   <!-- 总价格 -->
   <view class="total_price_wrap">
     <view class="total_price">
-      合计：<text class="total_price_text">￥999</text>
+      合计：<text class="total_price_text">￥{{totalPrice}}</text>
     </view>
     <view>包含运费</view>
   </view>
   <!-- 结算 -->
   <view class="order_pay_wrap">
-    结算(2)
+    结算({{totalNum}})
   </view>
 </view>
