--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -17,30 +17,36 @@
 <view class="cart_content">
   <view class="cart_title">购物车</view>
   <view class="cart_main">
-    <view class="cart_item" wx:for="{{cart}}" wx:key="_id">
-      <!-- 复选框 -->
-      <view class="cart_chk_wrap">
-        <checkbox-group data-id="{{item._id}}" bindchange="handleItemChange">
-          <checkbox checked="{{item.checked}}"></checkbox>
-        </checkbox-group>
-      </view>
-      <!-- 商品图片 -->
-      <navigator class="cart_img_wrap">
-        <image mode="aspectFit" src="{{item.book_picture}}"></image>
-      </navigator>
-      <!-- 商品信息 -->
-      <view class="cart_info_wrap">
-        <view class="goods_name">{{item.book_name}}</view>
-        <view class="goods_price_wrap">
-          <view class="goods_price">￥{{item.book_price}}</view>
-          <view class="cart_num_tool">
-            <view class="num_edit">-</view>
-            <view class="goods_num">{{item.number}}</view>
-            <view class="num_edit">+</view>
+    <!-- cart长度不为0时才显示购物车信息，否则显示提示信息 -->
+    <block wx:if="{{cart.length!==0}}">
+      <view class="cart_item" wx:for="{{cart}}" wx:key="_id">
+        <!-- 复选框 -->
+        <view class="cart_chk_wrap">
+          <checkbox-group data-id="{{item._id}}" bindchange="handleItemChange">
+            <checkbox checked="{{item.checked}}"></checkbox>
+          </checkbox-group>
+        </view>
+        <!-- 商品图片 -->
+        <navigator class="cart_img_wrap">
+          <image mode="aspectFit" src="{{item.book_picture}}"></image>
+        </navigator>
+        <!-- 商品信息 -->
+        <view class="cart_info_wrap">
+          <view class="goods_name">{{item.book_name}}</view>
+          <view class="goods_price_wrap">
+            <view class="goods_price">￥{{item.book_price}}</view>
+            <view class="cart_num_tool">
+              <view bindtap="handleItemNumEdit" data-id="{{item._id}}" data-operation="{{1}}" class="num_edit">+</view>
+              <view class="goods_num">{{item.number}}</view>
+              <view bindtap="handleItemNumEdit" data-id="{{item._id}}" data-operation="{{-1}}" class="num_edit">-</view>
+            </view>
           </view>
         </view>
       </view>
-    </view>
+    </block>
+    <block wx:else>
+      <image mode="widthFix" src="https://i.niupic.com/images/2021/07/14/9nLG.jpg"></image>
+    </block>
   </view>
 </view>
 
@@ -48,7 +54,7 @@
 <view class="footer_tool">
   <!-- 全选 -->
   <view class="all_chk_wrap">
-    <checkbox-group bindchange="">
+    <checkbox-group bindchange="handleItemAllChecked">
       <checkbox checked="{{allChecked}}">全选</checkbox>
     </checkbox-group>
   </view>
@@ -60,7 +66,7 @@
     <view>包含运费</view>
   </view>
   <!-- 结算 -->
-  <view class="order_pay_wrap">
+  <view class="order_pay_wrap" bindtap="handlePay">
     结算({{totalNum}})
   </view>
 </view>
