--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -56,7 +56,7 @@
   <view class='list'>
     <view class='home' wx:for="{{list}}" >
       <view>
-        <navigator url="/pages/book_detail/book_detail?id={{item._id}}" hover-class="none" >
+        <navigator url="/pages/book_detail/book_detail?id={{item._id}}&name={{item.name}}&picture={{item.picture}}&price={{item.price}}" hover-class="none" >
           <image src="{{item.picture}}" mode="aspectFit"></image>
           <view><text>{{item.name}}</text></view>
           <view class="show">¥{{item.price}}</view>
