--- a/pages/address_sel/address_sel.wxss
+++ b/pages/address_sel/address_sel.wxss
@@ -31,11 +31,35 @@
   height: 20px;
 }
 
-.btn{
-  height: 8vh;
-  line-height: 8vh;
-  text-align: center;
-  background: #ff5f19;
-  font-size: 14px;
+.choice_btn{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 90rpx;
+  background-color: #fff;
+  display: flex;
+  border-top: 1rpx solid #ccc;
+}
+.choice_btn .add_btn{
+  flex: 3;
+  background-color: #ff5f19;
   color: #fff;
+  font-size: 32rpx;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-right: 1rpx solid white;
+}
+.choice_btn .submit_btn{
+  flex: 3;
+  background-color: #ff5f19;
+  color: #fff;
+  font-size: 32rpx;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-left: 1rpx solid white;
 }
