--- a/pages/book_detail/book_detail.wxss
+++ b/pages/book_detail/book_detail.wxss
@@ -1,1 +1,78 @@
 /* pages/book_detail/book_detail.wxss */
+
+.home{
+  border-bottom:2px solid #EDEDED; 
+  display: flex;
+  padding: 10px 0;
+  flex:40%
+}
+.home image{
+  padding-bottom:20px;
+  border-top:2px solid #EDEDED; 
+  border-bottom:2px solid #EDEDED; 
+}
+.home text{ 
+  width: 100%;
+  font-size: 20px;
+  color: #333;
+  margin-left:30px;
+}
+.show{
+  font-size: 20px;
+  margin-left:30px;
+  color:rgb(255,0,0)
+}
+.footer_tool{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 90rpx;
+  background-color: #fff;
+  display: flex;
+  border-top: 1rpx solid #666;
+}
+.footer_tool .all_chk_wrap{
+  flex: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer_tool .total_price_wrap{
+  flex: 5;
+  padding-right: 15rpx;
+  text-align: right;
+}
+.footer_tool .total_price_wrap .total_price .total_price_text{
+  color: #ff5f19;
+  font-size: 34rpx;
+  font-weight: 600;
+}
+.footer_tool .order_pay_wrap{
+  flex: 3;
+  border-right: 1rpx solid #EDEDED;
+  background-color: #ff5f19;
+  color: #fff;
+  font-size: 32rpx;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cart{
+  display: block;
+  width: 30px;
+  height: 30px;
+  margin: 0 auto;
+  padding-top: 0px;
+}
+
+.text{
+  display: block;
+  text-align: center;
+  width: 100%;
+  font-size: 14px;
+  color: #333;
+  padding-bottom: 50px;
+}
