--- a/pages/book_list/book_list.wxss
+++ b/pages/book_list/book_list.wxss
@@ -1,1 +1,61 @@
 /* pages/book_list/book_list.wxss */
+
+.home{
+  border-top:2px solid #EDEDED; 
+  border-bottom:2px solid #EDEDED; 
+  border-left:2px solid #EDEDED;
+  border-right:2px solid #EDEDED;
+  display: flex;
+  padding: 10px 0;
+  flex:40%
+}
+.home image{
+  display: flex;
+  width: 80px;
+  height: 80px;
+  margin: 0 auto;
+  padding-top: 10px;
+  margin-left:20px;
+}
+.home text{
+  width: 100%;
+  font-size: 14px;
+  color: #333;
+  padding-top: 10px;
+  margin-left:0px;
+}
+
+.list{
+  border-top:1px solid #EDEDED; 
+  display: flex;
+  justify-content: space-between;  
+  flex-wrap:wrap;
+  box-sizing: content-box;
+}
+.list .item{
+  flex:0 1 50%;
+  /* border-bottom:1px solid #EDEDED;  */
+  padding-top: 15px;
+}
+.list .item:nth-child(odd){
+  /* border-right:1px solid #EDEDED;  */
+  margin-right: -1px;
+}
+
+.list .item .text{
+  display: block;
+  font-size: 12px;
+  line-height: 22px;
+  margin:0 10px;
+}
+
+.list .item .product{
+  display: block;
+  width: 160px;
+  height: 160px;
+  margin: 0 auto;
+}
+
+.show{
+  color:rgb(255,0,0)
+}
