--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -1,31 +1,42 @@
 <!--pages/my/order/order.wxml-->
 <view class='main'>
   <view class='tab'>
-    <view bindtap='tabFun' data-index="{{1}}">
+    <view bindtap='tabFun' data-index="1">
       <text class='{{tabIndex==1?"active":""}}'>待付款</text>
     </view>
     <view bindtap='tabFun' data-index="2">
-      <text class='{{tabIndex==2?"active":""}}'>待发货</text>
+      <text class='{{tabIndex==2?"active":""}}'>已发货</text>
     </view>
     <view bindtap='tabFun' data-index="3">
-      <text class='{{tabIndex==3?"active":""}}'>已发货</text>
-    </view>
-    <view bindtap='tabFun' data-index="4">
-      <text class='{{tabIndex==4?"active":""}}'>已完成</text>
+      <text class='{{tabIndex==3?"active":""}}'>已完成</text>
     </view>
   </view>
   <scroll-view scroll-y class='list'>
-    <view class='item' wx:for="{{list}}" wx:key="*this">
+    <view class='item' wx:for="{{list}}" wx:if="{{item.state==tabIndex}}">
       <navigator class='content' hover-class="none" url="/pages/orderDetails/index?id={{item._id}}">
-        <!--点击时跳转至商品详情页面，页面链接填写至url-->
-        <image src='{{item.goods[0].img}}'></image>
+      <!--点击时跳转至商品详情页面，页面链接填写至url-->
+        <image src='{{item.image}}'></image>
         <view class='text'>
-          <view class='title'>共{{item.goods.length}}件商品</view>
-          <view class='spec'>{{item.creat_date}}</view>
+          <view class='title'>共{{item.goods}}件商品</view>
           <view class='price'>
-            <text>¥{{item.totalPrice}}</text>
+            <text>总计：¥{{item.totalPrice}}</text>
           </view>
-          <!--显示货物图片，货物数量，商品总价，应该和购物车类似-->
+          <view class='add'>
+            收件人：{{item.author}}
+          </view>
+          <view class='add'>
+            联系电话：{{item.mobile}}
+          </view>
+          <view class='add'>
+            地址：{{item.address[0]}} {{item.address[1]}} {{item.address[2]}} {{item.detailed}}
+          </view>
+          <view wx:if="{{item.state==1}}">
+            <button style="margin-right:50rpx" size='mini' class='btn3' bindtap='dele' data-item="{{item}}">删除</button> 
+            <button size='mini' class='btn1' bindtap='submitFun_buy' data-item="{{item}}">支付</button>
+          </view> 
+          <view wx:if="{{item.state==2}}"><button size='mini' class='btn2' bindtap='submitFun_rec' data-item="{{item}}">收货</button></view>
+          <view wx:if="{{item.state==3}}"><button size='mini' class='btn3' bindtap='dele' data-item="{{item}}">删除</button></view>
+        <!--显示货物图片，货物数量，商品总价，应该和购物车类似-->
         </view>
       </navigator>
     </view>
