--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -28,9 +28,9 @@
 
 .list .item{
   display: flex;
-  border-bottom: 1px solid #EDEDED;
+  border-bottom: 1px solid #f1a349;
   padding: 0 16px;
-  height: 95px;
+  height: 175px;
   align-items: center;
 }
 
@@ -61,6 +61,19 @@
 }
 
 .list .content .spec{
+  font-size: 13px;
+  color: #333333;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  line-height: 24px;    
+  max-height: 24px;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  margin-left:20px;
+}
+
+.list .content .add{
   font-size: 12px;
   color: #333333;
   overflow: hidden;
@@ -86,4 +99,25 @@
   color: #999999;
   flex: 1 0 50%;
   text-align: right;
+}
+
+.btn1{
+  margin-top: 30rpx;
+  background-color: #0fc94d;
+  color: white;
+  border-radius: 98rpx; 
+}
+
+.btn2{
+  margin-top: 30rpx;
+  background-color: #f1a349;
+  color: white;
+  border-radius: 98rpx; 
+}
+
+.btn3{
+  margin-top: 30rpx;
+  background-color: #e22315;
+  color: white;
+  border-radius: 98rpx; 
 }
